# ems-api

./: .env:Zone.Identifier  .gitignore  Dockerfile  README.md  app.py  data-inputs.md  docker-compose-devl.yaml  pyproject.toml  requirements.txt
api/: __init__.py  data.py  greet.py
functions/: __init__.py  device_total_function.py  energy_sources.py  get_max_energy.py  max_energy.py  total_usage.py
jobs/: csv_to_db.py
models/: __init__.py  device_total_usage_model.py  energy.py  max_energy.py  total_usage.py
