[project]
name = "ems-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-restx (>=1.3.0,<2.0.0)",
    "peewee (>=3.17.9,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
